tests/NormalTests/paczka1/small_fuzzy/63193230.err
Error in line 4: YMhaLSq A383 8,8
Error in line 7: PDc A982 190,3
